kubernetes/namespaces/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  namespace: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https-pythondiscord-root
      protocol: HTTPS
      port: 443
      hostname: "pythondiscord.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: pythondiscord.com-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-pythondiscord-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.pythondiscord.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: pythondiscord.com-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-pydis-wtf-root
      protocol: HTTPS
      port: 443
      hostname: "pydis.wtf"
      tls:
        mode: Terminate
        certificateRefs:
          - name: pydis.wtf-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-pydis-wtf-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.pydis.wtf"
      tls:
        mode: Terminate
        certificateRefs:
          - name: pydis.wtf-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
